--- a/boringtun/Cargo.toml
+++ b/boringtun/Cargo.toml
@@ -44,6 +44,9 @@ jni = { version = "0.19.0", optional = true }
 mock_instant = { version = "0.3", optional = true }
 socket2 = { version = "0.4.7", features = ["all"], optional = true }
 thiserror = { version = "1", optional = true }
+getrandom = { version = "0.2.11", features = ["js"] }
+wasm-timer = "0.2.5"
+log = "0.4.19"
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.25", default-features = false, features = [
