--- a/boringtun/Cargo.toml
+++ b/boringtun/Cargo.toml
@@ -47,6 +47,7 @@ thiserror = { version = "1", optional = true }
 getrandom = { version = "0.2.11", features = ["js"] }
 wasm-timer = "0.2.5"
 log = "0.4.19"
+js-sys = "0.3.67"
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.25", default-features = false, features = [
